--- a/Android/settings.gradle
+++ b/Android/settings.gradle
@@ -21,6 +21,7 @@ dependencyResolutionManagement {
         maven { setUrl("https://maven.aliyun.com/repository/public") }
         maven { setUrl("https://maven.aliyun.com/repository/google") }
         maven { setUrl("https://maven.aliyun.com/repository/gradle-plugin") }
+        maven { url 'https://mirrors.tencent.com/nexus/repository/maven-public/' }
     }
 }
 
