增加水印编辑

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         </activity>
 
         <activity android:name=".takepicture.TakePictureActivity"/>
+        <activity android:name=".watermar.WatermarkGeneratorActivity"/>
     </application>
 
 </manifest>
