--- a/Android/nettools/src/main/AndroidManifest.xml
+++ b/Android/nettools/src/main/AndroidManifest.xml
@@ -2,4 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 全局允许明文流量（HTTP） -->
+<!--    <application-->
+<!--        android:usesCleartextTraffic="true"/>-->
+    <!-- 配置网络安全策略 -->
+    <application
+        android:networkSecurityConfig="@xml/network_security_config"/>
 </manifest>
